--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
             </div>
         </footer>
 
+        <div id="overlay">
+            <form id="contact-form" action="mail.php" method="POST">
+                <input id="name" name="name" type="text" placeholder="What's your name?">
+                <input id="email" name="email" type="text" placeholder="What's your email?">
+                <textarea id="message" name="message" placeholder="How would you like to help?"></textarea>
+                <input id="submit" type="submit" value="Submit">
+            </form>
+        </div>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
