--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link href='http://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Alef:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -25,11 +26,20 @@
         <!-- Add your site or application content here -->
         <header></header>
         <div class="content-wrapper">
+            <ul class="language-options">
+                <li><button id="active">English</button></li>
+                <li><button>Español</button></li>
+                <li><button>Català</button></li>
+                <li><button>Italiano</button></li>
+                <li><button>Deutsch</button></li>
+                <li><button>Lietuvių</button></li>
+                <li><button id="hebrew">עברית</button></li>
+            </ul>
             <h1>WIKITONGUES</h1>
             <strong>Every language in the world, for everyone.</strong>
-            <p>Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
-            <button>Get involved.</button>
-            <ul>
+            <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
+            <button id="get-involved">Get involved.</button>
+            <ul id="social-media">
                 <li>
                     <a href="http://www.youtube.com/wikitongues" target="_blank">
                         <img src="img/youtube.png">
@@ -59,7 +69,7 @@
         </div>
         <footer>
             <div class="content-wrapper">
-                <p>Organized by @<a href="http://www.twitter.com/dbudell" target="_blank">dbudell</a>,
+                <p>Made with international love by @<a href="http://www.twitter.com/dbudell" target="_blank">dbudell</a>,
                 @<a href="http://www.twitter.com/freddieandrade" target="_blank">freddieandrade</a>,
                 @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a> and 
                 @<a href="http://www.twitter.com/@fateuser" target="_blank">fateuser</a>.</p>
