--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><button>Italiano</button></li>
                 <li><button>Deutsch</button></li>
                 <li><button>Lietuvių</button></li>
-                <li><button id="hebrew">עברית</button></li>
+                <!--<li><button id="hebrew">עברית</button></li>-->
             </ul>
             <h1>WIKITONGUES</h1>
             <strong>Every language in the world, for everyone.</strong>
@@ -69,9 +69,9 @@
         </div>
         <footer>
             <div class="content-wrapper">
-                <p>Made with international love by @<a href="http://www.twitter.com/dbudell" target="_blank">dbudell</a>,
+                <p><span class="first">Made with international love by </span>@<a href="http://www.twitter.com/dbudell" target="_blank">dbudell</a>,
                 @<a href="http://www.twitter.com/freddieandrade" target="_blank">freddieandrade</a>,
-                @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a> and 
+                @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a><span class="second"> and</span> 
                 @<a href="http://www.twitter.com/@fateuser" target="_blank">fateuser</a>.</p>
                 <p>© 2014 Wikitongues, All Rights Reserved</p>
             </div>
