responsivized for iphone

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href='http://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/media-queries.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -26,9 +27,10 @@
         <header></header>
         <div class="content-wrapper">
             <h1>WIKITONGUES</h1>
-            <strong>Every language in the world, for everyone.</strong>
+            <h4>Every language in the world, <span class="no-wrap">for everyone.</span></h4>
             <p>Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
             <button>Get involved.</button>
+
             <ul>
                 <li>
                     <a href="http://www.youtube.com/wikitongues" target="_blank">
@@ -56,12 +58,13 @@
                     </a>
                 </li>
             </ul>
+            <p class="mobile-text">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
         </div>
         <footer>
             <div class="content-wrapper">
                 <p>Organized by @<a href="http://www.twitter.com/dbudell" target="_blank">dbudell</a>,
                 @<a href="http://www.twitter.com/freddieandrade" target="_blank">freddieandrade</a>,
-                @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a> and 
+                @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a> and
                 @<a href="http://www.twitter.com/@fateuser" target="_blank">fateuser</a>.</p>
                 <p>© 2014 Wikitongues, All Rights Reserved</p>
             </div>
