--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="content-wrapper">
                 <p><span class="first">Made with international love by </span>@<a href="http://www.twitter.com/dbudell" target="_blank">dbudell</a>,
                 @<a href="http://www.twitter.com/freddieandrade" target="_blank">freddieandrade</a>,
-                @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a><span class="second"> and</span> 
+                @<a href="http://www.twitter.com/@lindiebee" target="_blank">lindiebee</a><span class="second"> and</span>
                 @<a href="http://www.twitter.com/@fateuser" target="_blank">fateuser</a>.</p>
                 <p>© 2014 Wikitongues, All Rights Reserved</p>
             </div>
@@ -93,12 +93,13 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-48869719-1', 'wikitongues.org');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
