--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
 
             <ul id="social-media">
                 <li>
-                    <a href="http://www.youtube.com/wikitongues" target="_blank">
-                        <img src="img/youtube.png">
+                    <a class="youtube" href="http://www.youtube.com/wikitongues" target="_blank">
+                        <img src="img/youtube.svg">
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.facebook.com/wikitongues" target="_blank">
-                        <img src="img/facebook.png">
+                    <a class="facebook" href="http://www.facebook.com/wikitongues" target="_blank">
+                        <img src="img/facebook.svg">
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.twitter.com/wikitongues" target="_blank">
-                        <img src="img/twitter.png">
+                    <a class="twitter" href="http://www.twitter.com/wikitongues" target="_blank">
+                        <img src="img/twitter.svg">
                     </a>
                 </li>
                 <li>
-                    <a href="http://wikitongues.tumblr.com" target="_blank">
-                        <img src="img/tumblr.png">
+                    <a class="tumblr" href="http://wikitongues.tumblr.com" target="_blank">
+                        <img src="img/tumblr.svg">
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.instagram.com/wikitongues" target="_blank">
-                        <img src="img/instagram.png">
+                    <a class="instagram" href="http://www.instagram.com/wikitongues" target="_blank">
+                        <img src="img/instagram.svg">
                     </a>
                 </li>
             </ul>
