--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
         <div id="overlay">
             <form id="contact-form" action="mail.php" method="POST">
+                <h1>WIKITONGUES</h1>
                 <input id="name" name="name" type="text" placeholder="What's your name?">
                 <input id="email" name="email" type="text" placeholder="What's your email?">
                 <textarea id="message" name="message" placeholder="How would you like to help?"></textarea>
