--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h1>WIKITONGUES</h1>
                 <input id="name" name="name" type="text" placeholder="What's your name?">
                 <input id="email" name="email" type="text" placeholder="What's your email?">
-                <textarea id="message" name="message" placeholder="How would you like to help?"></textarea>
+                <textarea id="message" name="message" placeholder="Whats up?"></textarea>
                 <input id="submit" type="submit" value="Submit">
             </form>
         </div>
