language tool fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 <li><button>Italiano</button></li>
                 <li><button>Deutsch</button></li>
                 <li><button>Lietuvių</button></li>
-                <!--<li><button id="hebrew">עברית</button></li>-->
+                <li><button>Português</button></li>
+                <li><button>Русский</button></li>
+                <li><button id="hebrew">עברית</button></li>
+                <li><button>العربية</button></li>
             </ul>
             <h1>WIKITONGUES</h1>
             <h4>Every language in the world, for everyone.</h4>
