--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><button id="hebrew">עברית</button></li>
                 <li><button>العربية</button></li>
             </ul>
-            <h1>WIKITONGUES</h1>
+            <h1 id="logo">WIKITONGUES</h1>
             <h4>Every language in the world, for everyone.</h4>
             <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
             <button id="get-involved">Get involved.</button>
