--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
         <link href='http://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -23,7 +20,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <header></header>
         <div class="content-wrapper">
             <ul class="language-options">
                 <li><button id="active">English</button></li>
@@ -37,7 +33,7 @@
                 <li><button id="hebrew">עברית</button></li>
                 <li><button>العربية</button></li>
             </ul>
-            <h1>WIKITONGUES</h1>
+            <h1 class="logotype">WIKITONGUES</h1>
             <h4>Every language in the world, for everyone.</h4>
             <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
             <button id="get-involved">Get involved.</button>
@@ -83,7 +79,7 @@
 
         <div id="overlay">
             <form id="contact-form" action="mail.php" method="POST">
-                <h1>WIKITONGUES</h1>
+                <h1 class="contactLogotype">WIKITONGUES</h1>
                 <input id="name" name="name" type="text" placeholder="What's your name?">
                 <input id="email" name="email" type="text" placeholder="What's your email?">
                 <textarea id="message" name="message" placeholder="Whats up?"></textarea>
