--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href='http://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/media-queries.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -30,11 +31,11 @@
                 <li><button>Lietuvių</button></li>
                 <li><button>Português</button></li>
                 <li><button>Русский</button></li>
-                <li><button id="hebrew">עברית</button></li>
+                <li><button>עברית</button></li>
                 <li><button>العربية</button></li>
             </ul>
             <h1 class="logotype">WIKITONGUES</h1>
-            <h4>Every language in the world, for everyone.</h4>
+            <h4 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h4>
             <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
             <button id="get-involved">Get involved.</button>
 
@@ -87,10 +88,12 @@
             </form>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/jquery.fittext.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/contactResize.js"></script>
 
 
         <script>
