--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><script>')</script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="js/languagePicker.js"></script>
         <script src="js/contact.js"></script>
         <script src="js/footer.js"></script>
     </head>
@@ -27,16 +28,7 @@
 
         <div class="content-wrapper">
             <ul class="language-options">
-                <li><button id="English" class="active">English</button></li>
-                <li><button id="Spanish">Español</button></li>
-                <li><button id="Catalan">Català</button></li>
-                <li><button id="Italian">Italiano</button></li>
-                <li><button id="German">Deutsch</button></li>
-                <li><button id="Latvian">Lietuvių</button></li>
-                <li><button id="Portuguese">Português</button></li>
-                <li><button id="Russian">Русский</button></li>
-                <li><button id="Hebrew">עברית</button></li>
-                <li><button id="Arabic">العربية</button></li>
+            <!-- Language picker template -->
             </ul>
             <h1 class="logotype">WIKITONGUES</h1>
             <h4 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h4>
@@ -84,8 +76,6 @@
         <script src="js/jquery.fittext.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-        <script src="js/contactResize.js"></script>
-
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
