--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='http://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/media-queries.css">
+
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/style.css">
-
+        <link rel="stylesheet" href="css/media-queries.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     </head>
@@ -27,6 +27,10 @@
             <ul class="language-options">
             <!-- Language picker template -->
             </ul>
+            <button class="moreLanguages">...</button>
+            <div class="language-modal">
+            <!-- Language modal template -->
+            </div>
             <h1 class="logotype">WIKITONGUES</h1>
             <h4 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h4>
             <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
