--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button class="moreLanguages">...</button>
             <div class="language-modal">
             <!-- Language modal template -->
+            test
             </div>
             <h1 class="logotype">WIKITONGUES</h1>
             <h4 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h4>
