--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='http://fonts.googleapis.com/css?family=Raleway:800|Open+Sans:800,300&subset=cyrillic-ext,greek-ext,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/languages.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/forms.css">
         <link rel="stylesheet" type="text/css" media="only screen and (min-device-width : 320px) and (max-device-width : 480px)" href="css/media-queries.css">
-
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -31,10 +31,14 @@
             <div class="language-modal">
             <!-- Language modal template -->
             </div>
-            <h1 class="logotype">WIKITONGUES</h1>
-            <h4 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h4>
+            <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
+            <!-- <h1 class="logotype">WIKITONGUES</h1> -->
+            <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
             <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
-            <button id="get-involved">Get involved.</button>
+
+            <button id="submit">Submit video.</button>
+            <button id="contact">Get in touch.</button>
+            <button id="volunteer">Become a volunteer.</button>
 
             <ul id="social-media">
                 <li>
@@ -77,23 +81,15 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><script>')</script>
 
-        <script src="js/contact.js"></script>
+
         <script src="js/footer.js"></script>
+        <script src="js/contact.js"></script>
+        <script src="js/submit.js"></script>
         <script src="js/languagePicker.js"></script>
 
 
         <script src="js/jquery.fittext.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-48869719-1', 'wikitongues.org');
-            ga('send', 'pageview');
-        </script>
     </body>
 </html>
