--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
         <![endif]-->
 
         <div class="content-wrapper">
-            <ul class="language-options">
-            <!-- Language picker template -->
-            </ul>
-            <button class="moreLanguages">...</button>
-            <div class="language-modal">
-            <!-- Language modal template -->
+            <div class="language-selection">
+                <ul class="language-options">
+                <!-- Language picker template -->
+                </ul>
+                <button class="moreLanguages">...</button>
+                <div class="language-modal">
+                <!-- Language modal template -->
+                </div>
             </div>
             <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
             <!-- <h1 class="logotype">WIKITONGUES</h1> -->
