PHP for submit forms, CSS revisions

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
         <script src="js/footer.js"></script>
         <script src="js/contact.js"></script>
+        <script src="js/volunteer.js"></script>
         <script src="js/submit.js"></script>
         <script src="js/languagePicker.js"></script>
 
