--- a/privacy.html
+++ b/privacy.html
@@ -191,6 +191,7 @@
 
         <script src="js/footer.js"></script>
         <script src="js/contact.js"></script>
+        <script src="js/volunteer.js"></script>
         <script src="js/submit.js"></script>
         <script src="js/languagePicker.js"></script>
 
