soft border-radius

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                 </li>
             </ul>
             <p class="mobile-text">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
+
+            <img class="faces" src="/Users/FreddieAndrade/Desktop/faces/faces.png"></img>
         </div>
 
         <div id="overlay">
