--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="content-wrapper">
             <div class="language-selection">
                 <ul class="language-options">
-                <!-- Language picker template -->
+                    <li>
+                        <button class="languageButton active activeLanguage" id="English">English</button>
+                    </li>
                 </ul>
                 <button class="moreLanguages">...</button>
                 <div class="language-modal">
