about us page begun

--- a/about.html
+++ b/about.html
@@ -41,6 +41,13 @@
                 <p>
                 Our vision is to create a living database of video interviews with multiple speakers of all the world's languages, hosted on an open source platform that allows for frequent and new user-generated submissions and translations, facilitating not only a popular conversation about the value of identity but the research of linguists, sociologists and other academics in the social sciences.
                 </p>
+                <ul>
+                	<li>
+                		<img src="img/daniel.jpg" alt="Daniel Bogre Udell, Co-Founder">
+                		<strong>Daniel Bogre Udell</strong>
+              			<br/><span>Co-Founder</span>
+                	</li>
+                </ul>
             </div>
         </div>
 
