--- a/submit.html
+++ b/submit.html
@@ -12,8 +12,9 @@
         <link href='http://fonts.googleapis.com/css?family=Raleway:800|Open+Sans:800,300&subset=cyrillic-ext,greek-ext,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="css/languages.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/languages.css">
+        <link rel="stylesheet" type="text/css" href="css/submit.css">
         <link rel="stylesheet" type="text/css" href="css/forms.css">
         <link rel="stylesheet" type="text/css" media="only screen and (min-device-width : 320px) and (max-device-width : 480px)" href="css/media-queries.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -33,42 +34,27 @@
                 <!-- Language modal template -->
                 </div>
             </div>
-            <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
-            <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
-            <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
 
-            <button id="submit">Submit a video</button>
-            <button id="contact">Get in touch</button>
-            <button id="volunteer">Volunteer</button>
-
-            <ul id="social-media">
-                <li>
-                    <a class="youtube" href="http://www.youtube.com/wikitongues" target="_blank">
-                        <img src="img/youtube.svg">
-                    </a>
-                </li>
-                <li>
-                    <a class="facebook" href="http://www.facebook.com/wikitongues" target="_blank">
-                        <img src="img/facebook.svg">
-                    </a>
-                </li>
-                <li>
-                    <a class="twitter" href="http://www.twitter.com/wikitongues" target="_blank">
-                        <img src="img/twitter.svg">
-                    </a>
-                </li>
-                <li>
-                    <a class="tumblr" href="http://wikitongues.tumblr.com" target="_blank">
-                        <img src="img/tumblr.svg">
-                    </a>
-                </li>
-                <li>
-                    <a class="instagram" href="http://www.instagram.com/wikitongues" target="_blank">
-                        <img src="img/instagram.svg">
-                    </a>
-                </li>
-            </ul>
-            <p class="mobile-text">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
+            <div class="submit-page-about">
+                <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
+                <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
+                <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
+            </div>
+            <form id="submit-form-page" action="submit.php" method="post">
+                <h1 class="contactLogotype">WIKITONGUES<span>Submit</span></h1>
+                <ul>
+                    <li><input type="text" id="name" name="name" placeholder="What&#39;s your name?"></li>
+                    <li><input type="text" id="email" name="email" placeholder="What&#39;s your email?"></li>
+                    <li><input type="text" id="link" name="link" placeholder="Video File Link (Dropbox, Google Drive, Mediafire)"></li>
+                    <li><input type="text" id="speaker" name="speaker" placeholder="What&#39;s the speaker&#39;s name?"></li>
+                    <li class="video-language last"><input type="text" id="language" name="language" placeholder="What languages does this video display?"></li>
+                </ul>
+                <textarea name="transcription" id="transcription" cols="30" rows="10" class="optional" placeholder="Transcription (optional)"></textarea>
+                <textarea name="translation" id="translation" cols="30" rows="10" class="optional" placeholder="Translation (optional)"></textarea>
+                <textarea name="message" id="message" cols="30" rows="10" class="optional" placeholder="Message (optional)"></textarea>
+                <input type="submit" id="submit" value="Send">
+            </form>
+            &nbsp;
         </div>
 
         <div id="overlay">
