submit form logo link back to index

--- a/submit.html
+++ b/submit.html
@@ -36,7 +36,9 @@
             </div>
 
             <div class="submit-page-about">
-                <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
+                <a href="index.html">
+                    <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
+                </a>
                 <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
                 <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
             </div>
