changed text on index, added contact form and youtube link to submit.html

--- a/submit.html
+++ b/submit.html
@@ -9,7 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href='http://fonts.googleapis.com/css?family=Raleway:800|Open+Sans:800,300&subset=cyrillic-ext,greek-ext,latin-ext' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:800|Merriweather:300italic|Open+Sans:800,300&subset=cyrillic-ext,greek-ext,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -40,7 +40,10 @@
                     <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
                 </a>
                 <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
-                <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
+                <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages, the stories and memories that compose all our cultures. Join us and show the world the languages you use.</p>
+                <a href="http://youtube.com/wikitongues">For examples, visit our <span>Youtube</span> channel</a>
+                <br>
+                <a id="contact">For questions, <span>contact us</span></a>
             </div>
             <form id="submit-form-page" action="submit.php" method="post">
                 <h1 class="contactLogotype">WIKITONGUES<span>Submit</span></h1>
@@ -54,7 +57,7 @@
                 <textarea name="transcription" id="transcription" cols="30" rows="10" class="optional" placeholder="Transcription (optional)"></textarea>
                 <textarea name="translation" id="translation" cols="30" rows="10" class="optional" placeholder="Translation (optional)"></textarea>
                 <textarea name="message" id="message" cols="30" rows="10" class="optional" placeholder="Message (optional)"></textarea>
-                <input type="submit" id="submit" value="Send">
+                <input type="submit" id="send-button" value="Send">
             </form>
             &nbsp;
         </div>
