--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
             <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
-            <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages — the stories and the feelings behind them. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
+            <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages, the stories and memories that compose all our cultures. In coordination with a network of volunteers, we're dedicated to showing the world the true meaning of diversity.</p>
 
             <button id="submit">Submit a video</button>
             <button id="contact">Get in touch</button>
