--- a/about.html
+++ b/about.html
@@ -14,11 +14,12 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/languages.css">
         <link rel="stylesheet" type="text/css" href="css/page.css">
+        <link rel="stylesheet" type="text/css" href="css/about.css">
         <link rel="stylesheet" type="text/css" href="css/forms.css">
         <link rel="stylesheet" type="text/css" media="only screen and (min-device-width : 320px) and (max-device-width : 480px)" href="css/media-queries.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body>
+    <body class="about">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -34,18 +35,74 @@
                 </div>
             </div>
             <div class="content">
-                <h1 class="header">About Wikitongues</h1>
-                <h2 class="slogan">Every language in the world, for everyone.</h2>
-                <p>Wikitongues is an open source effort to create a video archive of native speakers and signers of the all the world's languages. The project is a vehicle for debate around the value and legitimacy of culture as expressed through language. We maintain ambassadors responsible for recording speakers and signers in their respective regions and conducting missions to produce content in areas of difficult access.
-                </p>
-                <p>
-                Our vision is to create a living database of video interviews with multiple speakers of all the world's languages, hosted on an open source platform that allows for frequent and new user-generated submissions and translations, facilitating not only a popular conversation about the value of identity but the research of linguists, sociologists and other academics in the social sciences.
-                </p>
-                <ul>
+                <a href="index.html">
+                    <img class="logo" src="img/wikitonguesLogoRectangle.svg" alt="">
+                </a>
+                <h1 class="header">About Us</h1>
+                <!--<h2 class="slogan">Every language in the world, for everyone.</h2>-->
+                <p>Wikitongues is a community of volunteers from around the world who believe in the value and the virtue of diversity. We're dedicated to building a living database of video interviews with multiple speakers and signers of all the world's languages, hosted on an open source platform to which anyone can contribute new videos, translations, and phrasebooks, facilitating a level of cultural exchange like never before.</p>
+                <p>If you share our belief in cultural diversity, <button class="volunteer">become a part of Wikitongues</button>. Help us grow our social media presence, design and develop our web platform, or become an ambassador, recording videos and adding to to our body of content. <!--<button class="volunteer">Join us.</button></p>-->
+                <h2>The Team</h2>
+                <ul id="volunteers-list">
                 	<li>
                 		<img src="img/daniel.jpg" alt="Daniel Bogre Udell, Co-Founder">
-                		<strong>Daniel Bogre Udell</strong>
-              			<br/><span>Co-Founder</span>
+						<br><strong>Daniel Bogre Udell</strong>
+						<br><span>Co-Founder</span>
+              			<br><span class="italic"><a href="https://www.google.com/maps/place/Port+Vila,+Vanuatu/@-17.7369433,168.3233695,12436m/data=!3m2!1e3!4b1!4m2!3m1!1s0x6e89605ec8926013:0x3ce794672329c796" target="_blank">New York City, USA</a></span>
+                	</li>
+                	<li>
+                		<img src="img/freddie.jpg" alt="Frederico Andrade, Co-Founder">
+                		<br><strong>Freddie Andrade</strong>
+                		<br><span>Co-Founder</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Port+Vila,+Vanuatu/@-17.7369433,168.3233695,12436m/data=!3m2!1e3!4b1!4m2!3m1!1s0x6e89605ec8926013:0x3ce794672329c796" target="_blank">New York City, USA</a></span>
+                	</li>
+                	<li>
+                		<img src="img/lindie.jpg" alt="Lindie Botes, Co-Founder">
+                		<br><strong>Lindie Botes</strong>
+                		<br><span>Co-Founder</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/New+York,+NY/@40.7056308,-73.9780035,79180m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62" target="_blank">Pretoria, South Africa</a></span>
+                	</li>
+                	<li>
+                		<img src="img/cathy.jpg" alt="Cathy Zhang, Product Manager">
+                		<br><strong>Cathy Zhang</strong>
+                		<br><span>Product Manager</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/New+York,+NY/@40.7056308,-73.9780035,79180m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62" target="_blank">New York City, USA</a></span>
+                	</li>
+                	<li>
+                		<img src="img/pau.jpg" alt="Pau Mateo, Ambassador">
+                		<br><strong>Pau Mateo</strong>
+                		<br><span>Ambassador</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Kaunas,+Lithuania/@54.889975,23.9272118,30037m/data=!3m2!1e3!4b1!4m2!3m1!1s0x46e72270b167d343:0x614bd1e0c7378bbc" target="_blank">Kaunas, Lithuania</a></span>
+                	</li>
+                	<li>
+                		<img src="img/sarah.jpg" alt="Sarah Doyle, Ambassador">
+                		<br><strong>Sarah Doyle</strong>
+                		<br><span>Ambassador</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Port+Vila,+Vanuatu/@-17.7369433,168.3233695,12436m/data=!3m2!1e3!4b1!4m2!3m1!1s0x6e89605ec8926013:0x3ce794672329c796" target="_blank">Port Vila, Vanuatu</a></span>
+                	</li>
+                    <li>
+                        <img src="img/manjusha.jpg" alt="Manjusha Raveendran, Ambassador">
+                        <br><strong>Manjusha Raveendran</strong>
+                        <br><span>Ambassador</span>
+                        <br><span class="italic"><a href="https://www.google.com/maps/place/Buffalo,+NY/@42.8962389,-78.854702,19130m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89d3126152dfe5a1:0x982304a5181f8171" target="_blank">Buffalo, USA</a></span>
+                    </li>
+                	<li>
+                		<img src="img/madeleine.jpg" alt="Madeleine Koerner, Ambassador">
+                		<br><strong>Madeleine Koerner</strong>
+                		<br><span>Ambassador</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Moscow,+Russia/@55.749792,37.632495,58785m/data=!3m2!1e3!4b1!4m2!3m1!1s0x46b54afc73d4b0c9:0x3d44d6cc5757cf4c" target="_blank">Moscow, Russia</a></span>
+                	</li>
+                	<li>
+                		<img src="img/yasmeen.jpg" alt="Yasmeen Abdullahi, Ambassador">
+                		<br><strong>Yasmeen Abdullahi</strong>
+                		<br><span>Ambassador</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Doha,+Qatar/@25.276282,51.50071,47214m/data=!3m1!1e3!4m2!3m1!1s0x3e45c534ffdce87f:0x44d9319f78cfd4b1" target="_blank">Doha, Qatar</a></span>
+                	</li>
+                	<li>
+                		<img src="img/plator.jpg" alt="Plator Gashi, Ambassador">
+                		<br><strong>Plator Gashi</strong>
+                		<br><span>Ambassador</span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Pristina/@42.6662068,21.1599255,9600m/data=!3m2!1e3!4b1!4m2!3m1!1s0x13549ee605110927:0x9365bfdf385eb95a" target="_blank">Prishtinë, Kosovo</a></span>
                 	</li>
                 </ul>
             </div>
