--- a/about.html
+++ b/about.html
@@ -45,61 +45,61 @@
                 <h2>The Team</h2>
                 <ul id="volunteers-list">
                 	<li>
-                		<img src="img/daniel.jpg" alt="Daniel Bogre Udell, Co-Founder">
+                		<img src="img/faces/daniel.jpg" alt="Daniel Bogre Udell, Co-Founder">
 						<br><strong>Daniel Bogre Udell</strong>
 						<br><span>Co-Founder</span>
               			<br><span class="italic"><a href="https://www.google.com/maps/place/Port+Vila,+Vanuatu/@-17.7369433,168.3233695,12436m/data=!3m2!1e3!4b1!4m2!3m1!1s0x6e89605ec8926013:0x3ce794672329c796" target="_blank">New York City, USA</a></span>
                 	</li>
                 	<li>
-                		<img src="img/freddie.jpg" alt="Frederico Andrade, Co-Founder">
+                		<img src="img/faces/freddie.jpg" alt="Frederico Andrade, Co-Founder">
                 		<br><strong>Freddie Andrade</strong>
                 		<br><span>Co-Founder</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/Port+Vila,+Vanuatu/@-17.7369433,168.3233695,12436m/data=!3m2!1e3!4b1!4m2!3m1!1s0x6e89605ec8926013:0x3ce794672329c796" target="_blank">New York City, USA</a></span>
                 	</li>
                 	<li>
-                		<img src="img/lindie.jpg" alt="Lindie Botes, Co-Founder">
+                		<img src="img/faces/lindie.jpg" alt="Lindie Botes, Co-Founder">
                 		<br><strong>Lindie Botes</strong>
                 		<br><span>Co-Founder</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/New+York,+NY/@40.7056308,-73.9780035,79180m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62" target="_blank">Pretoria, South Africa</a></span>
                 	</li>
                 	<li>
-                		<img src="img/cathy.jpg" alt="Cathy Zhang, Product Manager">
+                		<img src="img/faces/cathy.jpg" alt="Cathy Zhang, Product Manager">
                 		<br><strong>Cathy Zhang</strong>
                 		<br><span>Product Manager</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/New+York,+NY/@40.7056308,-73.9780035,79180m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62" target="_blank">New York City, USA</a></span>
                 	</li>
                 	<li>
-                		<img src="img/pau.jpg" alt="Pau Mateo, Ambassador">
+                		<img src="img/faces/pau.jpg" alt="Pau Mateo, Ambassador">
                 		<br><strong>Pau Mateo</strong>
                 		<br><span>Ambassador</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/Kaunas,+Lithuania/@54.889975,23.9272118,30037m/data=!3m2!1e3!4b1!4m2!3m1!1s0x46e72270b167d343:0x614bd1e0c7378bbc" target="_blank">Kaunas, Lithuania</a></span>
                 	</li>
                 	<li>
-                		<img src="img/sarah.jpg" alt="Sarah Doyle, Ambassador">
+                		<img src="img/faces/sarah.jpg" alt="Sarah Doyle, Ambassador">
                 		<br><strong>Sarah Doyle</strong>
                 		<br><span>Ambassador</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/Port+Vila,+Vanuatu/@-17.7369433,168.3233695,12436m/data=!3m2!1e3!4b1!4m2!3m1!1s0x6e89605ec8926013:0x3ce794672329c796" target="_blank">Port Vila, Vanuatu</a></span>
                 	</li>
                     <li>
-                        <img src="img/manjusha.jpg" alt="Manjusha Raveendran, Ambassador">
+                        <img src="img/faces/manjusha.jpg" alt="Manjusha Raveendran, Ambassador">
                         <br><strong>Manjusha Raveendran</strong>
                         <br><span>Ambassador</span>
                         <br><span class="italic"><a href="https://www.google.com/maps/place/Buffalo,+NY/@42.8962389,-78.854702,19130m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89d3126152dfe5a1:0x982304a5181f8171" target="_blank">Buffalo, USA</a></span>
                     </li>
                 	<li>
-                		<img src="img/madeleine.jpg" alt="Madeleine Koerner, Ambassador">
+                		<img src="img/faces/madeleine.jpg" alt="Madeleine Koerner, Ambassador">
                 		<br><strong>Madeleine Koerner</strong>
                 		<br><span>Ambassador</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/Moscow,+Russia/@55.749792,37.632495,58785m/data=!3m2!1e3!4b1!4m2!3m1!1s0x46b54afc73d4b0c9:0x3d44d6cc5757cf4c" target="_blank">Moscow, Russia</a></span>
                 	</li>
                 	<li>
-                		<img src="img/yasmeen.jpg" alt="Yasmeen Abdullahi, Ambassador">
+                		<img src="img/faces/yasmeen.jpg" alt="Yasmeen Abdullahi, Ambassador">
                 		<br><strong>Yasmeen Abdullahi</strong>
                 		<br><span>Ambassador</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/Doha,+Qatar/@25.276282,51.50071,47214m/data=!3m1!1e3!4m2!3m1!1s0x3e45c534ffdce87f:0x44d9319f78cfd4b1" target="_blank">Doha, Qatar</a></span>
                 	</li>
                 	<li>
-                		<img src="img/plator.jpg" alt="Plator Gashi, Ambassador">
+                		<img src="img/faces/plator.jpg" alt="Plator Gashi, Ambassador">
                 		<br><strong>Plator Gashi</strong>
                 		<br><span>Ambassador</span>
                 		<br><span class="italic"><a href="https://www.google.com/maps/place/Pristina/@42.6662068,21.1599255,9600m/data=!3m2!1e3!4b1!4m2!3m1!1s0x13549ee605110927:0x9365bfdf385eb95a" target="_blank">Prishtinë, Kosovo</a></span>
