fixed mobile revisions

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <h1 class="header">About Us</h1>
                 <!--<h2 class="slogan">Every language in the world, for everyone.</h2>-->
                 <p>Wikitongues is a community of volunteers from around the world who believe in the value and the virtue of diversity. We're dedicated to building a living database of video interviews with multiple speakers and signers of all the world's languages, hosted on an open source platform to which anyone can contribute new videos, translations, and phrasebooks, facilitating a level of cultural exchange like never before.</p>
-                <p>If you share our belief in cultural diversity, <button class="volunteer">become a part of Wikitongues</button>. Help us grow our social media presence, design and develop our web platform, or become an ambassador, recording videos and adding to to our body of content. <!--<button class="volunteer">Join us.</button></p>-->
+                <p>If you share our belief in cultural diversity, <button class="volunteer">join us</button>! Help us grow our social media presence, design and develop our web platform, or become an ambassador, recording videos and adding to to our body of content. <!--<button class="volunteer">Join us.</button></p>-->
                 <h2>The Team</h2>
                 <ul id="volunteers-list">
                 	<li>
@@ -60,7 +60,7 @@
                 		<img src="img/faces/lindie.jpg" alt="Lindie Botes, Co-Founder">
                 		<br><strong>Lindie Botes</strong>
                 		<br><span>Co-Founder</span>
-                		<br><span class="italic"><a href="https://www.google.com/maps/place/New+York,+NY/@40.7056308,-73.9780035,79180m/data=!3m2!1e3!4b1!4m2!3m1!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62" target="_blank">Pretoria, South Africa</a></span>
+                		<br><span class="italic"><a href="https://www.google.com/maps/place/Pretoria,+South+Africa/@-25.7586499,28.219682,47035m/data=!3m2!1e3!4b1!4m2!3m1!1s0x1e95619cbec65033:0xf66262b07a847b4c" target="_blank">Pretoria, South Africa</a></span>
                 	</li>
                 	<li>
                 		<img src="img/faces/cathy.jpg" alt="Cathy Zhang, Product Manager">
