--- a/submit.html
+++ b/submit.html
@@ -41,9 +41,9 @@
                 </a>
                 <h2 class="slogan">Every language in the world, <span class="no-wrap">for everyone.</span></h2>
                 <p id="summary">Wikitongues is a community effort to give all the world’s people access to all the world’s 7,000 languages, the stories and memories that compose all our cultures. Join us and show the world the languages you use.</p>
-                <a href="http://youtube.com/wikitongues">For examples, visit our <span>Youtube</span> channel</a>
+                <a href="http://youtube.com/wikitongues">For examples, visit us <span>on Youtube</span>.</a>
                 <br>
-                <a id="contact">For questions, <span>contact us</span></a>
+                <a id="contact">For questions, <span>contact us</span>.</a>
             </div>
             <form id="submit-form-page" action="submit.php" method="post">
                 <h1 class="contactLogotype">WIKITONGUES<span>Submit</span></h1>
