--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <div class="log-in-fields">
+            <ul>
+                <li class="left-block"><img class="logo" src="img/wikitonguesLogoSquare.svg" alt=""></li>
+                <li class="left-block"><a href="#">Sign up</a></li>
+                <li><button class="go">Go</button></li>
+                <li><input type="text" placeholder="password"></li>
+                <li><input type="text" placeholder="email or username"></li>
+            </ul>
+        </div>
         <div class="content-wrapper">
+            <div class="log-in-area">
+                <button class="sign-up">Sign Up</button>
+                <button class="log-in">Log In</button>
+            </div>
             <div class="language-selection">
                 <ul class="language-options">
                     <li>
@@ -90,6 +103,7 @@
         <script src="js/volunteer.js"></script>
         <script src="js/submit.js"></script>
         <script src="js/languagePicker.js"></script>
+        <script src="js/login.js"></script>
 
 
         <script src="js/plugins.js"></script>
