--- a/app/video.html
+++ b/app/video.html
@@ -21,8 +21,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-            <img class="home" src="../img/wikitonguesLogoSquare.svg" alt="">
-            <a href="#" class="profile">F</a>
+            <a class="home" href="app.html"><img class="home" src="../img/wikitonguesLogoSquare.svg" alt=""></a>
+            <a href="../index.html" class="profile">F</a>
             <input type="text" placeholder="Search for a language">
             <a href="#">Explore the world</a>
         </header>
