--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li class="left-block"><img class="logo" src="img/wikitonguesLogoSquare.svg" alt=""></li>
                 <li class="left-block"><a href="#">Sign up</a></li>
-                <li><a href="app/video.html" class="go">Go</a></li>
+                <li><a href="app/app.html" class="go">Go</a></li>
                 <li><input type="text" placeholder="password"></li>
                 <li><input type="text" placeholder="email or username"></li>
             </ul>
