--- a/app/app.html
+++ b/app/app.html
@@ -52,11 +52,13 @@
                     <a href="#"><h1>#WeeklyTongue</h1></a>
                     <div class="about">
                         <h2 class="language">Aymara</h2>
+                        <p class="similarities">Similar to <a href="#">Jaqaru</a>, <a href="#">Kawki</a> and other <a href="#">Quechumaran</a> languages</p>
                         <p>Aski urukipan! Good day!</p>
                         <p>This week’s <a href="#">#WeeklyTongue</a> is Aymara, a threatened language also known as Aymar aru. It is written with a Spanish version of the Roman alphabet, and the spelling system was standardized by the Peruvian government in 1985.</p>
                         <p>Aymara is an official language of Bolivia and is recognized as a minority language in Peru and Chile. It is also spoken in parts of Argentina, and at present there are around 2.8 million speakers. Aymara is similar to Quechua as they share a third of their vocabulary. There are three mutually intelligible dialects of Aymara. Aymara is a subject-object-verb language and adjectives precede the nouns they modify.</p>
+                        <p>Did you know alpaca is a word of Aymaran origin? (Allpaca).</p>
                     </div>
-                    <h2>Examples of speakers</h2>
+                    <h2>Aymara videos</h2>
                     <div class="video">
                         <a href="video.html"><img src="../img/faces/app/anis.jpg" alt=""></a>
                         <a href="video.html"><img src="../img/faces/app/keifer.jpg" alt=""></a>
@@ -94,15 +96,13 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="misc">
-                        <p>Did you know alpaca is a word of Aymaran origin? (Allpaca).</p>
-                        <p>This <a href="http://www.native-languages.org/aymara.htm#language" target="_blank">link</a> has much more information on the language.</p>
-                    </div>
                 </div>
-
             </div>
         </div>
-
+         <div class="misc">
+            <h2>Notes and references</h2>
+            <a href="http://www.native-languages.org/aymara.htm#language" target="_blank">NativeLanguages.org</a>
+        </div>
         <footer>
         <!-- Footer template -->
         </footer>
