--- a/test.html
+++ b/test.html
@@ -28,6 +28,13 @@
         <div class="content-wrapper">
             <div class="content">
                 <h1>List of world languages</h1>
+                <div class="progress-bar-container">
+                    <div class="progress-bar"></div>
+                </div>
+                <p><span class="recorded-number"></span> of <span class="language-number"></span> languages recorded (<span class="percentage"></span>)</p>
+                <button>All</button>
+                <button>Recorded</button>
+                <button>Not Recorded</button>
                 <ul class="list"></ul>
             </div>
         </div>
