renamed test files

--- a/languageList.html
+++ b/languageList.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" type="text/css" href="css/page.css">
         <link rel="stylesheet" type="text/css" href="css/about.css">
         <link rel="stylesheet" type="text/css" href="css/forms.css">
-        <link rel="stylesheet" type="text/css" href="css/test.css">
+        <link rel="stylesheet" type="text/css" href="css/languageList.css">
         <link rel="stylesheet" type="text/css" media="only screen and (min-device-width : 320px) and (max-device-width : 480px)" href="css/media-queries.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -52,7 +52,7 @@
         <!-- <script src="js/volunteer.js"></script> -->
         <!-- <script src="js/submit.js"></script> -->
         <!-- <script src="js/languagePicker.js"></script> -->
-        <script src="js/test.js"></script>
+        <script src="js/languageList.js"></script>
 
 
         <script src="js/jquery.fittext.js"></script>
