--- a/languageList.html
+++ b/languageList.html
@@ -57,7 +57,7 @@
 
         <script src="js/jquery.fittext.js"></script>
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/translate.js"></script>
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
