renamed main.js to translate.js for more semantic documentation

--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
 
 
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/translate.js"></script>
     </body>
 </html>
