--- a/submit.html
+++ b/submit.html
@@ -82,6 +82,6 @@
 
         <script src="js/jquery.fittext.js"></script>
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/translate.js"></script>
     </body>
 </html>
